# wb-idf-core

./: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  Kconfig.projbuild  README.md  doxygen2docusaurus.json  wb-idf-core.dox
.gitlab/ci/: push_to_github.yml
examples/wb-idf-i2c/: CMakeLists.txt
wb-idf-i2c/: CMakeLists.txt  Kconfig.projbuild  README.md  wb-idf-i2c.dox
wb-idf-i2c/examples/basic/: CMakeLists.txt
wb-idf-i2c/examples/basic/main/: CMakeLists.txt  main.c
wb-idf-i2c/include/: wb-idf-i2c.h
wb-idf-i2c/src/: wb-idf-i2c.c
wb-idf-sntp/: CMakeLists.txt  wb-idf-sntp.dox  wb_idf_sntp.kconfig
wb-idf-sntp/examples/basic/: CMakeLists.txt
wb-idf-sntp/examples/basic/main/: CMakeLists.txt  main.c
wb-idf-sntp/include/: wb-idf-sntp.h
wb-idf-sntp/src/: wb-idf-sntp.c
wb-idf-wlan/: CMakeLists.txt  wb-idf-wlan.dox  wb_idf_wlan.kconfig
wb-idf-wlan/examples/ap/: CMakeLists.txt
wb-idf-wlan/examples/ap/main/: CMakeLists.txt  main.c
wb-idf-wlan/examples/station/: CMakeLists.txt
wb-idf-wlan/examples/station/main/: CMakeLists.txt  main.c
wb-idf-wlan/include/: wb-idf-wlan.h
wb-idf-wlan/src/: wb-idf-wlan.c
